#1164 allow searching for loop_uuid
